fix issue where background is too big

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -231,6 +231,7 @@ li a {
 	.body{
 		background-image:none;
 		background-color:#c31e1e;
+		width:300px;
 	}
 	
 
